<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/background2"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"></Space>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="Doctor consultation"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/book_appointment_view"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="@color/w1"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="18dp"
                        android:src="@drawable/icon_book_appointment" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="10dp"
                        android:text="Book an appointment"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </com.google.android.material.card.MaterialCardView>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></Space>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/online_consultation_view"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="@color/w2"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="34dp"
                        android:src="@drawable/icon_online_consultation" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="10dp"
                        android:text="Online Consultation"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </com.google.android.material.card.MaterialCardView>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></Space>
            </LinearLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"></Space>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"></Space>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="Documents and reports"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"></Space>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></Space>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/update_medical_hist"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="@color/w3"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="40dp"
                        android:src="@drawable/icon_upload" />

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="Update Medical History"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18dp" />
                </com.google.android.material.card.MaterialCardView>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></Space>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/download_reports"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="@color/w4"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7dp"
                        android:layout_marginBottom="23dp"
                        android:src="@drawable/icon_download_reports" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="Download Report"

                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </com.google.android.material.card.MaterialCardView>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></Space>
            </LinearLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"></Space>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"></Space>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="Medicines "
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"></Space>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></Space>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/my_prescription_view"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="@color/w5"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="25dp"
                        android:src="@drawable/icon_prescriptions" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="My Prescriptions"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </com.google.android.material.card.MaterialCardView>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></Space>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/orderMedicines"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="@color/w6"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/icon_order_medicines" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="Order Medicine"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </com.google.android.material.card.MaterialCardView>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></Space>
            </LinearLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"></Space>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>