<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications"
        android:orderInCategory="100"
        android:title="Notifications"
        app:showAsAction="always" />
</menu>