<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".patient_side.Activtiy_ImageViewr">


    <com.ortiz.touchview.TouchImageView
        android:id="@+id/zoomable_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/image_not_available"
        android:transitionName="fade"
        app:layout_constraintTop_toBottomOf="@id/action_bar_temp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar_temp"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/back_button_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>